# poetry-test

./: .gitignore  Makefile  pyproject.toml
test_poetry/: main.py
